@@ -1,3 +1,9 @@
+2006-10-29  Steve Huntley  <stephen.huntley@alum.mit.edu>
+
+	Added comments and license info:
+	* library/template/globfind.tcl
+	* library/template/tdelta.tcl
+
 2006-10-23  Steve Huntley  <stephen.huntley@alum.mit.edu>
 
 	Initial upload of template virtual filesystems in new subfolder:
